# satop-platform

./: .gitignore  Dockerfile  MANIFEST.in  README.md  __init__.py  docker-compose.yaml  flightPlan.py  pyproject.toml  requirements.txt  scheduling.py
.devcontainer/: devcontainer.json
doc/auth/: providers.plantuml
docker/: .env  docker-compose.yaml
satop_platform/: __main__.py  cli.py  main.py
satop_platform/components/authorization/: auth.py  cli.py  models.py  types.py
satop_platform/components/groundstation/: connector.py
satop_platform/components/groundstation/skyfield_tests/: skyfield.ipynb  stations.txt
satop_platform/components/restapi/: __init__.py  auth.py  database.py  exceptions.py  models.py  restapi.py  routes.py
satop_platform/components/sample/: __init__.py  router.py  sample.py
satop_platform/components/syslog/: models.py  syslog.py
satop_platform/config/: api.yml  auth.yaml
satop_platform/core/: component_initializer.py  config.py  events.py  satop_application.py
satop_platform/default/config/: api.yaml
satop_platform/plugin_engine/: plugin.py  plugin_engine.py  plugin_engine_interface.py
satop_platform/plugins/Dummy/: config.yaml  main.py
satop_platform/plugins/DummyDepender/: config.yaml  main.py
satop_platform/plugins/dummy/: config.yaml  dummy.py
satop_platform/plugins/dummy_depender/: config.yaml  dummy_depender.py
satop_platform/plugins/password_authentication_provider/: config.yaml  password_authentication_provider.py
satop_plugins/: disabled.txt
satop_plugins/api_key_auth/: __init__.py  api_key_auth.py  config.yaml
satop_plugins/compiler/: compiler.py  config.yaml
satop_plugins/compiler/codegen/: codegen.py
satop_plugins/compiler/common/: cfgbuilder.py  csh.py  graph.py  types.py
satop_plugins/compiler/parser/: parser.py
satop_plugins/dummy/: __init__.py  config.yaml  dummy.py
satop_plugins/dummy_depender/: __init__.py  config.yaml  dummy_depender.py
satop_plugins/flight_planning/: README.md  __init__.py  config.yaml  flightPlan.py  scheduling.py  storageDatabase.py
satop_plugins/password_authentication_provider/: __init__.py  config.yaml  password_authentication_provider.py
satop_plugins/proc_comp/: README.md  test_flightplan.json
satop_plugins/proc_comp_plugin/: __init__.py  compiler.py  config.yaml
satop_plugins/scheduling/: __init__.py  config.yaml  scheduling.py
satop_plugins/storage_system/: __init__.py  config.yaml  storage_plugin.py
scripts/: seed_db.py  start-and-seed.sh
test/postman/: SatOP Platform.postman_collection.json
test/pytest/api/: test_scheduling_api.py
test/pytest/unit/: test_storage_database.py
test/tools/: echo_ws.py
test/tools/csh_client/: csh_client.py  csh_wrapper.py
