[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  
include = ["satop_platform"]

[project]
name = "satop_platform"
version = "0.1.0"
authors = [
    { name = "Aleksander", email = "202004314@post.au.dk" },
    { name = "Tobias", email = "202004621@post.au.dk" }
]

requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "click==8.1.7",
    "fastapi==0.115.4",
    "h11==0.14.0",
    "idna==3.10",
    "networkx==3.4.2",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "PyJWT==2.9.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.36",
    "sqlmodel==0.0.22",
    "starlette==0.41.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.32.0",
    "websockets==14.1"
]